# SheepAndWolf-game

./: CMakeLists.txt  README.md
SEYADOUMOUGAMMADOU_Askar_projet_final/: Makefile  Project_SDL1.cpp  animal.cpp  animal.h  cmake_install.cmake  ground.cpp  interacting_object.h  main.cpp  moving_object.cpp  playable_character.h  rendered_object.h  shepherd.cpp  shepherd_dog.cpp  shepherd_dog.h  wolf.cpp
SEYADOUMOUGAMMADOU_RAVINDRARASA/: CMakeCache.txt  CMakeLists.txt  Project_SDL1.h  application.cpp  application.h  declaration.h  ground.h  interacting_object.cpp  moving_object.h  playable_character.cpp  rendered_object.cpp  sheep.cpp  sheep.h  shepherd.h  wolf.h
